--- a/CCIP/CCIP/Base.lproj/Main.storyboard
+++ b/CCIP/CCIP/Base.lproj/Main.storyboard
@@ -1388,63 +1388,63 @@ Label</string>
                                             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="mzi-hr-0E0">
                                                 <rect key="frame" x="0.0" y="0.0" width="420" height="580"/>
                                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                                                <subviews>
-                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="message" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XIm-YR-Ngz">
-                                                        <rect key="frame" x="50" y="130" width="320" height="100"/>
-                                                        <constraints>
-                                                            <constraint firstAttribute="height" constant="100" id="eJm-Mp-zrN"/>
-                                                            <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="100" id="etH-PR-lGc"/>
-                                                            <constraint firstAttribute="height" constant="100" id="i8I-0P-dz9"/>
-                                                            <constraint firstAttribute="width" constant="320" id="pjp-CY-KPU"/>
-                                                            <constraint firstAttribute="height" constant="100" id="vlk-Qg-xmS"/>
-                                                        </constraints>
-                                                        <fontDescription key="fontDescription" name="PingFangTC-Regular" family="PingFang TC" pointSize="20"/>
-                                                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                                                        <nil key="highlightedColor"/>
-                                                        <variation key="default">
-                                                            <mask key="constraints">
-                                                                <exclude reference="eJm-Mp-zrN"/>
-                                                                <exclude reference="etH-PR-lGc"/>
-                                                                <exclude reference="i8I-0P-dz9"/>
-                                                            </mask>
-                                                        </variation>
-                                                    </label>
-                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="V4I-va-kvf">
-                                                        <rect key="frame" x="110" y="320" width="200" height="30"/>
-                                                        <constraints>
-                                                            <constraint firstAttribute="height" constant="30" id="B3Q-cJ-8m1"/>
-                                                            <constraint firstAttribute="width" constant="200" id="NUg-LQ-bsV"/>
-                                                        </constraints>
-                                                        <fontDescription key="fontDescription" name="PingFangTC-Regular" family="PingFang TC" pointSize="15"/>
-                                                        <state key="normal" title="Hide"/>
-                                                        <connections>
-                                                            <action selector="clossView:" destination="tZ3-Ep-FUt" eventType="touchUpInside" id="hdo-SA-qui"/>
-                                                        </connections>
-                                                    </button>
-                                                </subviews>
-                                                <constraints>
-                                                    <constraint firstAttribute="centerY" secondItem="XIm-YR-Ngz" secondAttribute="bottom" constant="60" id="98F-Jk-NVm"/>
-                                                    <constraint firstItem="V4I-va-kvf" firstAttribute="centerX" secondItem="mzi-hr-0E0" secondAttribute="centerX" id="Gt6-vh-7LO"/>
-                                                    <constraint firstItem="V4I-va-kvf" firstAttribute="bottom" secondItem="mzi-hr-0E0" secondAttribute="centerY" constant="60" id="HnN-Cg-bNu"/>
-                                                    <constraint firstItem="V4I-va-kvf" firstAttribute="centerX" secondItem="XIm-YR-Ngz" secondAttribute="centerX" id="wg7-Az-H0w"/>
-                                                    <constraint firstItem="XIm-YR-Ngz" firstAttribute="leading" secondItem="mzi-hr-0E0" secondAttribute="leading" constant="50" id="wmk-mJ-lKH"/>
-                                                </constraints>
-                                                <variation key="default">
-                                                    <mask key="constraints">
-                                                        <exclude reference="wmk-mJ-lKH"/>
-                                                    </mask>
-                                                </variation>
                                             </view>
                                             <vibrancyEffect>
                                                 <blurEffect style="light"/>
                                             </vibrancyEffect>
                                         </visualEffectView>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="message" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fpJ-Z6-78r">
+                                            <rect key="frame" x="50" y="130" width="320" height="100"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="320" id="J5c-Zv-ix7"/>
+                                                <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="100" id="RcR-gv-3Hk"/>
+                                                <constraint firstAttribute="height" constant="100" id="dLY-aZ-h9s"/>
+                                                <constraint firstAttribute="height" constant="100" id="gzk-43-Anx"/>
+                                                <constraint firstAttribute="width" constant="320" id="iuT-EH-J7f"/>
+                                                <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="100" id="jUP-5k-yRn"/>
+                                                <constraint firstAttribute="height" constant="100" id="m3R-JL-hvO"/>
+                                            </constraints>
+                                            <fontDescription key="fontDescription" name="PingFangTC-Regular" family="PingFang TC" pointSize="20"/>
+                                            <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                            <nil key="highlightedColor"/>
+                                            <variation key="default">
+                                                <mask key="constraints">
+                                                    <exclude reference="dLY-aZ-h9s"/>
+                                                    <exclude reference="jUP-5k-yRn"/>
+                                                    <exclude reference="m3R-JL-hvO"/>
+                                                </mask>
+                                            </variation>
+                                        </label>
+                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="uhq-sl-Sa9">
+                                            <rect key="frame" x="170" y="350" width="80" height="30"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" constant="80" id="dgr-Hp-rAE"/>
+                                                <constraint firstAttribute="height" constant="30" id="kNK-Mo-jtr"/>
+                                                <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="200" id="pMi-wV-gBa"/>
+                                                <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="30" id="ziD-BX-wJ5"/>
+                                            </constraints>
+                                            <fontDescription key="fontDescription" name="PingFangTC-Regular" family="PingFang TC" pointSize="15"/>
+                                            <state key="normal" title="Retry"/>
+                                            <variation key="default">
+                                                <mask key="constraints">
+                                                    <exclude reference="pMi-wV-gBa"/>
+                                                    <exclude reference="ziD-BX-wJ5"/>
+                                                </mask>
+                                            </variation>
+                                            <connections>
+                                                <action selector="clossView:" destination="tZ3-Ep-FUt" eventType="touchUpInside" id="Wfo-uZ-Esl"/>
+                                            </connections>
+                                        </button>
                                     </subviews>
                                     <constraints>
                                         <constraint firstAttribute="bottom" secondItem="BF7-fa-dz9" secondAttribute="bottom" id="AAX-Rg-eES"/>
                                         <constraint firstItem="BF7-fa-dz9" firstAttribute="leading" secondItem="Hw6-0q-Vyq" secondAttribute="leading" id="H4Z-Us-zCw"/>
                                         <constraint firstItem="BF7-fa-dz9" firstAttribute="top" secondItem="Hw6-0q-Vyq" secondAttribute="top" id="PM8-jA-CWA"/>
                                         <constraint firstAttribute="trailing" secondItem="BF7-fa-dz9" secondAttribute="trailing" id="Q9e-Ks-aHO"/>
+                                        <constraint firstItem="uhq-sl-Sa9" firstAttribute="centerX" secondItem="Hw6-0q-Vyq" secondAttribute="centerX" id="ZE7-Tb-pi8"/>
+                                        <constraint firstItem="fpJ-Z6-78r" firstAttribute="centerX" secondItem="Hw6-0q-Vyq" secondAttribute="centerX" id="d80-p0-nin"/>
+                                        <constraint firstAttribute="centerY" secondItem="fpJ-Z6-78r" secondAttribute="bottom" constant="60" id="iyJ-0M-mD4"/>
+                                        <constraint firstItem="uhq-sl-Sa9" firstAttribute="top" secondItem="Hw6-0q-Vyq" secondAttribute="centerY" constant="60" id="jqN-Y5-uaw"/>
                                     </constraints>
                                 </view>
                                 <blurEffect style="light"/>
@@ -1461,8 +1461,8 @@ Label</string>
                     <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
                     <size key="freeformSize" width="420" height="600"/>
                     <connections>
-                        <outlet property="closeButton" destination="V4I-va-kvf" id="nwf-gT-dRe"/>
-                        <outlet property="messageLabel" destination="XIm-YR-Ngz" id="Xzq-W4-IiW"/>
+                        <outlet property="closeButton" destination="uhq-sl-Sa9" id="h9Z-Nz-Lhn"/>
+                        <outlet property="messageLabel" destination="fpJ-Z6-78r" id="n0a-xY-j6F"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="RuT-hy-wjH" userLabel="First Responder" sceneMemberID="firstResponder"/>
