--- a/CCIP/CCIP/Base.lproj/Main.storyboard
+++ b/CCIP/CCIP/Base.lproj/Main.storyboard
@@ -176,29 +176,48 @@
                                                 <blurEffect style="light"/>
                                             </vibrancyEffect>
                                         </visualEffectView>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nug-PN-SE0">
-                                            <rect key="frame" x="40" y="40" width="340" height="250"/>
-                                            <constraints>
-                                                <constraint firstAttribute="height" constant="250" id="zgb-fn-Qwr"/>
-                                            </constraints>
-                                            <fontDescription key="fontDescription" name="PingFangTC-Regular" family="PingFang TC" pointSize="17"/>
-                                            <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="• • •" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lZF-gg-GiD">
+                                            <rect key="frame" x="195" y="302" width="28.333333333333343" height="17"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                            <color key="textColor" red="0.60777515172958374" green="0.60788232088088989" blue="0.60776835680007935" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                             <nil key="highlightedColor"/>
                                         </label>
-                                        <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="N3c-1x-If0">
-                                            <rect key="frame" x="60" y="330" width="300" height="30"/>
+                                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Mye-a9-7BF">
+                                            <rect key="frame" x="75" y="401" width="270" height="1"/>
+                                            <color key="backgroundColor" red="0.0" green="0.60713750123977661" blue="0.47257083654403687" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                             <constraints>
-                                                <constraint firstAttribute="height" constant="30" id="33T-P4-oX9"/>
-                                                <constraint firstAttribute="width" constant="300" id="6FO-ei-bwB"/>
+                                                <constraint firstAttribute="width" constant="270" id="k21-6W-iBl"/>
+                                                <constraint firstAttribute="height" constant="1" id="n3P-aW-jun"/>
                                             </constraints>
-                                            <fontDescription key="fontDescription" name="PingFangTC-Regular" family="PingFang TC" pointSize="14"/>
+                                        </view>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nug-PN-SE0">
+                                            <rect key="frame" x="76.333333333333314" y="64" width="268" height="203"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="203" id="84y-zb-pHt"/>
+                                                <constraint firstAttribute="width" constant="268" id="kVx-bR-wWm"/>
+                                            </constraints>
+                                            <string key="text">Please reference your attendee detail information, and your will found your access token.
+
+Please copy and paste the token into next field or click the token link in the reference mail.</string>
+                                            <fontDescription key="fontDescription" name="PingFangTC-Regular" family="PingFang TC" pointSize="18"/>
+                                            <color key="textColor" red="0.2901606559753418" green="0.29021644592285156" blue="0.29015710949897766" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Token Here ..." textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="N3c-1x-If0">
+                                            <rect key="frame" x="75" y="369" width="270" height="30"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="30" id="Kgw-cW-3Gf"/>
+                                                <constraint firstAttribute="width" constant="270" id="dnP-Fr-JuI"/>
+                                            </constraints>
+                                            <color key="textColor" red="0.0" green="0.60713750123977661" blue="0.47257083654403687" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                            <fontDescription key="fontDescription" name="PingFangTC-Regular" family="PingFang TC" pointSize="16"/>
                                             <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" keyboardType="alphabet" returnKeyType="join"/>
                                             <connections>
                                                 <outlet property="delegate" destination="VKq-4v-Yvp" id="k2G-pz-ly6"/>
                                             </connections>
                                         </textField>
                                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8w3-iH-STq">
-                                            <rect key="frame" x="75" y="391" width="270" height="45"/>
+                                            <rect key="frame" x="75.333333333333314" y="433" width="270" height="45"/>
                                             <constraints>
                                                 <constraint firstAttribute="width" constant="270" id="8hu-v4-MyY"/>
                                                 <constraint firstAttribute="height" constant="45" id="FSR-OA-U65"/>
@@ -211,17 +230,19 @@
                                         </button>
                                     </subviews>
                                     <constraints>
-                                        <constraint firstItem="N3c-1x-If0" firstAttribute="top" secondItem="nug-PN-SE0" secondAttribute="bottom" constant="40" id="6Ur-bh-nT5"/>
-                                        <constraint firstItem="N3c-1x-If0" firstAttribute="centerX" secondItem="pBJ-Cx-2mH" secondAttribute="centerX" id="B98-oo-IZQ"/>
+                                        <constraint firstItem="N3c-1x-If0" firstAttribute="centerX" secondItem="pBJ-Cx-2mH" secondAttribute="centerX" id="1h0-gX-uGZ"/>
+                                        <constraint firstItem="nug-PN-SE0" firstAttribute="centerX" secondItem="pBJ-Cx-2mH" secondAttribute="centerX" id="2cm-li-lN8"/>
                                         <constraint firstItem="hQW-Em-vct" firstAttribute="leading" secondItem="pBJ-Cx-2mH" secondAttribute="leading" id="BKT-oD-QqG"/>
-                                        <constraint firstItem="nug-PN-SE0" firstAttribute="top" secondItem="pBJ-Cx-2mH" secondAttribute="top" constant="40" id="Dry-Vy-PIw"/>
-                                        <constraint firstItem="nug-PN-SE0" firstAttribute="leading" secondItem="pBJ-Cx-2mH" secondAttribute="leading" constant="40" id="MRm-l5-p4K"/>
                                         <constraint firstAttribute="bottom" secondItem="hQW-Em-vct" secondAttribute="bottom" id="SqT-Mh-MNP"/>
+                                        <constraint firstItem="lZF-gg-GiD" firstAttribute="centerX" secondItem="pBJ-Cx-2mH" secondAttribute="centerX" id="Wwd-VC-Lv0"/>
                                         <constraint firstItem="hQW-Em-vct" firstAttribute="top" secondItem="pBJ-Cx-2mH" secondAttribute="top" id="cX9-HQ-4Eh"/>
+                                        <constraint firstItem="8w3-iH-STq" firstAttribute="top" secondItem="Mye-a9-7BF" secondAttribute="bottom" constant="31" id="enK-9C-kxe"/>
+                                        <constraint firstItem="Mye-a9-7BF" firstAttribute="centerX" secondItem="pBJ-Cx-2mH" secondAttribute="centerX" id="fhI-sq-aIV"/>
+                                        <constraint firstItem="lZF-gg-GiD" firstAttribute="top" secondItem="nug-PN-SE0" secondAttribute="bottom" constant="35" id="iEk-rm-GGa"/>
                                         <constraint firstAttribute="trailing" secondItem="hQW-Em-vct" secondAttribute="trailing" id="jlZ-SY-L3H"/>
-                                        <constraint firstItem="8w3-iH-STq" firstAttribute="top" secondItem="N3c-1x-If0" secondAttribute="bottom" constant="31" id="nyL-uV-7SA"/>
+                                        <constraint firstItem="Mye-a9-7BF" firstAttribute="top" secondItem="N3c-1x-If0" secondAttribute="bottom" constant="2" id="pW0-Ea-1Us"/>
                                         <constraint firstItem="8w3-iH-STq" firstAttribute="centerX" secondItem="nug-PN-SE0" secondAttribute="centerX" id="q3W-NT-1Ha"/>
-                                        <constraint firstAttribute="trailing" secondItem="nug-PN-SE0" secondAttribute="trailing" constant="40" id="vW2-3i-V2i"/>
+                                        <constraint firstAttribute="bottom" secondItem="8w3-iH-STq" secondAttribute="bottom" constant="102" id="rvs-zj-7S6"/>
                                     </constraints>
                                 </view>
                                 <blurEffect style="extraLight"/>
@@ -235,6 +256,7 @@
                             <constraint firstItem="Ane-io-2fB" firstAttribute="leading" secondItem="7ZP-Wx-GSU" secondAttribute="leadingMargin" constant="-20" id="K5y-rv-EDV"/>
                             <constraint firstItem="Ane-io-2fB" firstAttribute="top" secondItem="Ikf-Vw-yPD" secondAttribute="bottom" constant="-20" id="KOz-oh-FfY"/>
                             <constraint firstAttribute="bottomMargin" secondItem="Ane-io-2fB" secondAttribute="bottom" constant="-20" id="PXw-Op-yQS"/>
+                            <constraint firstItem="nug-PN-SE0" firstAttribute="top" secondItem="Ikf-Vw-yPD" secondAttribute="bottom" constant="64" id="pqG-jP-L4s"/>
                             <constraint firstItem="Ane-io-2fB" firstAttribute="top" secondItem="Ikf-Vw-yPD" secondAttribute="bottom" id="umr-38-btZ"/>
                         </constraints>
                         <variation key="default">
@@ -255,7 +277,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dnj-al-u0m" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-1350" y="1965"/>
+            <point key="canvasLocation" x="-1350.7246376811595" y="1964.6739130434785"/>
         </scene>
         <!--Main Tab Bar View Controller-->
         <scene sceneID="djy-Ka-IMA">
@@ -264,6 +286,7 @@
                     <toolbarItems/>
                     <navigationItem key="navigationItem" id="klf-rp-hYS"/>
                     <tabBar key="tabBar" contentMode="scaleToFill" id="WUv-Be-dcN">
+                        <rect key="frame" x="0.0" y="0.0" width="1000" height="1000"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.0" colorSpace="custom" customColorSpace="sRGB"/>
                     </tabBar>
@@ -886,7 +909,7 @@ Label</string>
                                         <rect key="frame" x="0.0" y="28" width="414" height="80"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="Hmk-Qi-7k1" id="w2s-YF-NQD">
-                                            <rect key="frame" x="0.0" y="0.0" width="414" height="79.5"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="79.666666666666671"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0000-00-00 00:00:00" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Kxe-Os-o2e">
@@ -1234,7 +1257,7 @@ Label</string>
             <objects>
                 <navigationController id="2iG-px-jKh" customClass="MainNavViewController" sceneMemberID="viewController">
                     <tabBarItem key="tabBarItem" title="Schedule" image="icon_ios_topcharts.png" id="s9e-mH-WEn"/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" misplaced="YES" id="geD-Aj-Nie">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="geD-Aj-Nie">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
